--- a/homework2/substrate-node-template-polkadot-v0.9.40/pallets/kitties/Cargo.toml
+++ b/homework2/substrate-node-template-polkadot-v0.9.40/pallets/kitties/Cargo.toml
@@ -23,10 +23,10 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 
-
 [dev-dependencies]
 sp-core = { version = "7.0.0", default-features=false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
+pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 
 [features]
 default = ["std"]
@@ -37,6 +37,7 @@ std = [
 	"frame-system/std",
 	"scale-info/std",
 	"sp-io/std",
+	"pallet-balances/std",
 ]
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
 try-runtime = ["frame-support/try-runtime"]
