--- a/homework4/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
+++ b/homework4/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
@@ -51,6 +51,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
+pallet-kuaidi100 = { version = "4.0.0-dev", default-features = false, path = "../pallets/kuaidi100" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.40" }
