--- a/homework4/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
+++ b/homework4/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
@@ -51,6 +51,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
+pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 pallet-kuaidi100 = { version = "4.0.0-dev", default-features = false, path = "../pallets/kuaidi100" }
 
 [build-dependencies]
@@ -74,6 +75,7 @@ std = [
 	"pallet-grandpa/std",
 	"pallet-sudo/std",
 	"pallet-template/std",
+	"pallet-kuaidi100/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
