尝试修复编译问题

--- a/homework6/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
+++ b/homework6/substrate-node-template-polkadot-v0.9.40/runtime/Cargo.toml
@@ -71,6 +71,7 @@ std = [
 	"frame-system/std",
 	"frame-try-runtime/std",
 	"pallet-babe/std",
+	"pallet-im-online/std",
 	"pallet-balances/std",
 	"pallet-grandpa/std",
 	"pallet-sudo/std",
@@ -110,6 +111,7 @@ try-runtime = [
 	"frame-system/try-runtime",
 	"frame-support/try-runtime",
 	"pallet-babe/try-runtime",
+	"pallet-im-online/try-runtime",
 	"pallet-balances/try-runtime",
 	"pallet-grandpa/try-runtime",
 	"pallet-sudo/try-runtime",
